@@ -1,0 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Benext Panic Watch -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Configuration -->
+	<CommandClass id="112">
+		<Value type="button" genre="config" instance="1" index="1" label="Set to Default" size="1" value="0">
+			<Help>Set all configuration values to default values (factory settings).</Help>
+		</Value>
+		<Value type="int" genre="config" instance="1" index="2" label="Time to press the panic Watch" size="1" min="0" max="255" value="100" >
+			<Help>
+                The time that the panic pushbutton must be pressed before a (panic) message is sent out to the controller.
+                0: send directly the panic message when pressed.
+                1-255: send a panic message after you keep holding the button pressed for this value x 10ms.
+            </Help>
+		</Value>
+		<Value type="int" genre="config" instance="1" index="3" label="Min led feedback time panic" size="1" min="0" max="255" value="100" >
+			<Help>
+                Minimum time that led feedback is shown after a panic message.
+                0: led only stays on during the send time.
+                1-255: led stays on during send time + this value*10ms.
+            </Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="4" label="Buttons mapped" size="1" min="0" max="255" value="0">
+			<Help>
+                With this config parameter you can map the buttons to send different Z-Wave messages.
+                0: SOS button sends an ALARM_REPORT to nodes group 1.
+                1-255: SOS button sends an BASIC_SET, 0xFF to nodes group 1.
+            </Help>
+		</Value>		
+	</CommandClass>
+	<!-- Basic set as report -->
+	<CommandClass id="32" setasreport="true" />
+
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="2">
+			<Group index="1" max_associations="8" label="Report"/>
+            <Group index="2" max_associations="8" label="Not used"/>
+		</Associations>
+	</CommandClass>
+</Product>
