@@ -114,6 +114,7 @@ Version 1.5
  - Issue #998 - Add Zooz ZEN07 Mini Plug from DeviantEng (Nechry)
  - Issue #999 - Add new id in Fibaro fgd212.xml from DeviantEng (Nechry)
  - Issue #1004 - Add support config for Neo Coolcam NAS-WS02Z water leakage sensor from nmaster2042 (Nechry)
+ - Add BeNext Panic Watch (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
